@@ -66,6 +66,7 @@ const Object* scheme::getBuiltinSymbols() {
         SA("accum"),
         SA("acond"),
         SA("adjust-arglist"),
+        SA("after"),
         SA("aif"),
         SA("aif->let"),
         SA("alist"),
@@ -91,6 +92,7 @@ const Object* scheme::getBuiltinSymbols() {
         SA("assq"),
         SA("assv"),
         SA("b"),
+        SA("before"),
         SA("begin"),
         SA("binop"),
         SA("body"),
@@ -143,6 +145,7 @@ const Object* scheme::getBuiltinSymbols() {
         SA("call-with-string-io"),
         SA("call-with-string-output-port"),
         SA("call-with-values"),
+        SA("call/cc"),
         SA("caller"),
         SA("calls"),
         SA("can-frees"),
@@ -235,6 +238,7 @@ const Object* scheme::getBuiltinSymbols() {
         SA("cons"),
         SA("cons*"),
         SA("consumer"),
+        SA("cont"),
         SA("content"),
         SA("copy-identifier"),
         SA("count"),
@@ -269,6 +273,7 @@ const Object* scheme::getBuiltinSymbols() {
         SA("drop-right"),
         SA("drop-right!"),
         SA("dummy"),
+        SA("dynamic-wind"),
         SA("e"),
         SA("e1"),
         SA("e2"),
