@@ -1,5 +1,7 @@
 2008-08-12  higepon  <higepon@users.sourceforge.jp>
 
+        * Added dynamic-wind. It works well.
+
         * VM.cpp (VM::run): Fixed bug of recieve from (values).
 
 2008-08-08  higepon  <higepon@users.sourceforge.jp>
